# nix-eval-jobs

./: default.nix  flake.nix  meson.build
src/: cache-status-resolver.cc  cache-status-resolver.hh  daemon-settings.cc  daemon-settings.hh  drv.cc  eval-args.cc  eval-args.hh  meson.build  nix-eval-jobs.cc  worker.cc
tests-functional/: test_eval.py
tests-functional/assets/: flake.nix
